# database-migrations-guide

./: .gitignore  404.html  LICENSE  Makefile  book.toml  index.html  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  main.yml
docs/: index.md
docs/postgres/: how_tos.md  index.md
docs/postgres/add/: columns.md  constraints.md  foreign_keys.md  indexes.md
docs/postgres/alter/: data.md  table.md
docs/postgres/drop/: data.md  tables.md
postgres/: index.html
postgres/add/columns/: index.html
postgres/add/constraints/: index.html
postgres/add/foreign_keys/: index.html
postgres/add/indexes/: index.html
postgres/alter/data/: index.html
postgres/alter/table/: index.html
postgres/drop/data/: index.html
postgres/drop/tables/: index.html
postgres/how_tos/: index.html
script/: Makefile  NOTES.md  create.sql  docker-compose.yaml  loop.py  pyproject.toml
search/: search_index.json
src/: README.md  SUMMARY.md
src/postgres/: README.md  alter_data.md  alter_table.md  how_tos.md
src/postgres/add/: README.md  columns.md  constraints.md  foreign_keys.md  indexes.md
src/postgres/drop/: README.md  data.md  tables.md
