[tool.poetry]
name = "database-migrations-guide-main"
version = "0.1.0"
description = ""
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mkdocs-material = "^9.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
