[tool.poetry]
name = "script"
version = "0.1.0"
description = ""
authors = ["Daniele Esposti <daniele@withplum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.46"
black = "^22.12.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
